# Qt_projects

./: .gitignore  README.md
AirportInspector/: CMakeLists.txt  airportsloadwindow.cpp  airportsloadwindow.h  airportsloadwindow.ui  airportsloadwindow.ui.autosave  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
Task_1/HelloGraphicWorld/: CMakeLists.txt
Task_10/PreTCPclient/: CMakeLists.txt  mainwindow.cpp  tcpclient.cpp
Task_2/modules_project/: CMakeLists.txt
Task_3/testDesignerProject/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow_V2.ui
Task_4/WidgetsProject/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
Task_5/Timer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  signals.h
Task_5/timer_2/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  stopwatch.cpp  stopwatch.h
Task_6/PreConcurrent/: mainwindow.cpp  mainwindow.h
Task_7/Graphs/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  plotwidget.cpp  plotwidget.h  plotwidget.ui
Task_8/DataBase/: CMakeLists.txt  database.cpp  dbdata.cpp  mainwindow.cpp  mainwindow.h
Task_8/DataBase_QSqlTableModel/: CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
Task_8/QSqlTableModel_QSqlQueryModel/: CMakeLists-.txt  CMakeLists.txt  database.cpp  database.h  mainwindow.cpp  mainwindow.ui
Task_9/PreUDPsocket/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui  udpworker.cpp  udpworker.h
